--- a/css/web.css
+++ b/css/web.css
@@ -208,3 +208,96 @@ body {
   opacity: 0;
   visibility: hidden;
 }
+/*............................................*/
+.btn_predict .btn {
+  box-shadow: none;
+  width: 250px;
+  height: 60px;
+  background-color:  #3c3f4e;
+  border-radius: 8px;
+  letter-spacing: 1.3px;
+  transition: .25s;
+  align-items: center;
+  text-align: center;
+ margin-top: 10px;
+ font-size: 20px;
+ color: #ecf0f3;
+ position: absolute;
+}
+/*..........................................................
+# About
+--------------------------------------------------------------*/
+.about {
+  /* background: url("../img/ديكور-محل-من-الداخل-2-450x300.jpg") center center; */
+  background-size: cover;
+  position: relative;
+  padding: 80px 0;
+  width: 100%;
+  height: 130vh;
+}
+.about:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.034);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.about .about-img {
+  position: relative;
+  transition: 0.5s;
+}
+.about .about-img img {
+  max-width: 100%;
+  border: 4px solid rgba(255, 255, 255, 0.2);
+  position: relative;
+}
+.about .about-img::before {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 60px;
+  height: 60px;
+  z-index: 1;
+  content: "";
+  border-left: 5px solid  #3c3f4e;
+  border-top: 5px solid  #3c3f4e;
+  transition: 0.5s;
+}
+.about .about-img::after {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  width: 60px;
+  height: 60px;
+  z-index: 2;
+  content: "";
+  border-right: 5px solid  #3c3f4e;
+  border-bottom: 5px solid  #3c3f4e;
+  transition: 0.5s;
+}
+.about .about-img:hover {
+  transform: scale(1.08);
+}
+.about .about-img:hover::before {
+  left: 10px;
+  top: 10px;
+}
+.about .about-img:hover::after {
+  right: 10px;
+  bottom: 10px;
+}
+.about .content h3 {
+  font-weight: 600;
+  font-size: 26px;
+}
+.about .content a{
+  position: absolute;
+  color: #3c3f4e;
+}
+
+.content  h4:hover > a,
+.content  h4.active > a {
+   color: #fff;
+}
